--- a/ass 7/grid2.html
+++ b/ass 7/grid2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 6</title>
-    <link rel="stylesheet" href="grid2.css">   
+    <link rel="stylesheet" href="grid.css">   
 </head>
 <body>
     <div class="container">
@@ -16,11 +16,21 @@
         <div class="box5">5</div>
         <div class="box6">
             <ul class="menu">
-                <li class = "Raiting"> Raiting</li>
-                <li class = "Join"> Join</li>
-                <li class = "Profile"> Profile</li>
-                <li class = "Search"> Search</li>
-                <li class = "Menu"> Menu</li>
+                <li class = "Raiting"> 
+                <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/%D0%B8%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_2024-12-06_161834459.png?raw=true" alt="Raiting" />
+                </li>
+                <li class = "Join"> 
+                <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/%D0%B8%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_2024-12-06_161824371.png?raw=true" alt="Join" />
+                </li>
+                <li class = "Profile"> 
+                <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/%D0%B8%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_2024-12-06_161806861.png?raw=true" alt="Profile" />
+                </li>
+                <li class = "Search"> 
+                <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/%D0%B8%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_2024-12-06_161756988.png?raw=true" alt="Search" />
+                </li>
+                <li class = "Menu"> 
+                <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/%D0%B8%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_2024-12-06_161740446.png?raw=true" alt="Menu" />
+                </li>
             </ul>
         </div>
         <div class="box7">7</div>
