--- a/ass 9/grid4.html
+++ b/ass 9/grid4.html
@@ -9,28 +9,34 @@
 </head>
 <body>
     <!-- Style Switcher Button -->
-    <button onclick='switchStyle()' style='position: absolute; top:0; right:0; background-color: #ff6600; color: white; border: none; padding: 10px; cursor: pointer;'>Style</button> 
+    <button onclick='switchStyle()' style='position: absolute; top:0; right:0; background-color: #ff6600; color: white; border: none; padding: 10px; cursor: pointer;'>
+      Style
+      </button> 
+
+    <!-- Theme Switcher Button -->
+    <button onclick="toggleDarkTheme()" style="position: absolute; top: 40px; right: 0px; padding: 10px 15px; background-color: #333; color: white; border: none; border-radius: 5px; cursor: pointer;">
+      Toggle Theme
+      </button>
 
     <!-- Main Container -->
     <div class="container">
         <!-- Logo Box -->
         <div class="box logo">
-            <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/%D0%B8%D0%B7%D0%BE%D0%B1%D1%80%D0%B0%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5_2024-12-06_172918136.png?raw=true" alt="Logo">
+            <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/Logo%20ESL.png?raw=true" alt="Logo">
         </div>
 
         <!-- Menu Box -->
         <div class="box menu">
             <ul class="menu-list">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
 
         <!-- Hero Box -->
         <div class="box hero">
-            <h1>Welcome to Our Website</h1>
         </div>
 
         <!-- Flexbox Layout 1 -->
@@ -38,12 +44,12 @@
             <div class="flex-column">
                 <h2>Section 1</h2>
                 <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/Download%20Telegram%20stickers%20for%20free_%20The%20most%20popular%20sticker%20collections%20for%20Telegram.jpg?raw=true" alt="Section 1 Image">
-                <p>This is the first section.</p>
+                <p>This is Mafu Mafu drinking juice. Impressive.</p>
             </div>
             <div class="flex-column">
                 <h2>Section 2</h2>
                 <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/Mafumafu.jpg?raw=true" alt="Section 2 Image">
-                <p>This is the second section.</p>
+                <p>This is Mafu Mafu eating rolls. Very nice.</p>
             </div>
         </div>
 
@@ -52,18 +58,19 @@
             <div class="flex-column">
                 <h2>Section 3</h2>
                 <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/%D0%B7%D0%B0%D0%B3%D1%80%D1%83%D0%B6%D0%B5%D0%BD%D0%BE.gif?raw=true" alt="Section 3 Image">
-                <p>This is the third section.</p>
+                <p>Silly Mafu.</p>
             </div>
             <div class="flex-column">
                 <h2>Section 4</h2>
                 <img src="https://github.com/imanbekov-a-auca-2022/HTML/blob/main/Mafumafu%20Cute%20Sticker%20-%20Mafumafu%20Cute%20Animated%20-%20Discover%20&%20Share%20GIFs.gif?raw=true" alt="Section 4 Image">
-                <p>This is the fourth section.</p>
+                <p>Cutie Mafu :3</p>
             </div>
         </div>
 
         <!-- Left Sidebar -->
         <div class="box sidebar">
-            <p>Advertisement or content</p>
+            <p>Raid Shadow Legends, one of the biggest mobile role-playing games of 2019 and it's totally free! Currently almost 10 million users have joined Raid over the last six months, and it's one of the most impressive games in its class with detailed models, environments and smooth 60 frames per second animations! All the champions in the game can be customized with unique gear that changes your strategic buffs and abilities! The dungeon bosses have some ridiculous skills of their own and figuring out the perfect party and strategy to overtake them's a lot of fun! Currently with over 300,000 reviews, Raid has almost a perfect score on the Play Store! The community is growing fast and the highly anticipated new faction wars feature is now live, you might even find my squad out there in the arena! It's easier to start now than ever with rates program for new players you get a new daily login reward for the first 90 days that you play in the game! So what are you waiting for? Go to the video description, click on the special links and you'll get 50,000 silver and a free epic champion as part of the new player program to start your journey! Good luck and I'll see you there!</p>
+            <img src="https://shared.cloudflare.steamstatic.com/store_item_assets/steam/apps/2333480/capsule_616x353.jpg?t=1721400070" alt="Advertisement">
         </div>
     </div>
 
@@ -76,6 +83,12 @@
             } else {
                 style.setAttribute('href', 'grid4.css');
             }
+        }
+    </script>
+    <!-- Script for Theme Switcher -->
+    <script>
+        function toggleDarkTheme() {
+        document.body.classList.toggle('dark-theme');
         }
     </script>
 </body>
